# alts-alt.server

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.dev.yml  dev.Dockerfile
.github/workflows/: build.yml  canary.yml  check.yml  deploy.yaml  deploy.yml  lint.yml
scripts/: deploy.sh
server/: Cargo.toml
server/src/: api.rs  main.rs
server_utils/: Cargo.toml
server_utils/src/: cache.rs  lib.rs  router.rs  static_server.rs  types.rs  utils.rs
src/: api.rs  cache.rs  cors.rs  main.rs  router.rs  static_server.rs  twitch.rs  types.rs  utils.rs
src/kennel/: json.rs  mod.rs  response.rs  state.rs  stream.rs
