[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures-util = "0.3"
http = "1.2.0"
tokio-util = "0.7.13"
itertools = "0.14.0"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
