[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.23"
rocket = { version = "0.5.1", features = ["json"] }
kennel-club = { git = "https://github.com/a1ts-a1t/kennel-club.git" }
serde_json = "1.0.145"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
