[package]
name = "server_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
tokio-util = "0.7.13"
itertools = "0.14.0"

